Tue Jul 13 22:41:03 PDT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: added check in xsltCopyText to assure
	  content is in dictionary before doing a straight copy of
	  content (bug 302821)

Tue Jul 13 16:16:31 PDT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed to set current default value for
	  XInclude when creating new TransformContext
	* libxslt/xslt.c: minor change for per-mille

Sun Jul 10 16:17:53 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltwin32config.h*: try to avoid generating conflicts
	* libexslt/dynamic.c: applied patch from Mark Vakoc to implement
	  dyn:map
	* configure.in tests/exslt/Makefile.am tests/exslt/dynamic/*:
	  added test for dyn:map to the regression suite

Sat Jul  2 02:32:24 PDT 2005 <wbrack@mmm.com.hk>

	* libxslt/numbers.c: further fixes for bug 309209, changing
	  behaviour of format-number.
	* libxslt/xslt.c: changed definition of per-mille character from
	  '?' to Unicode #2030 (UTF-8 '‰') (ref XSLT spec 12.3)
	  
2005-06-30  Federico Mena Quintero  <federico@ximian.com>

	* libxslt/xsltwin32config.h: Added this file back.  We'll have to
	figure out a way to make jhbuild not get CVS conflicts with it.

Thu Jun 30 14:09:55 PDT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c: fixed bug in negative prefix (bug 309209)
	
2005-06-17  Federico Mena Quintero  <federico@ximian.com>

	* libxslt/xsltwin32config.h: Removed from CVS; this is a generated
	file anyway and it breaks jhbuild all the time.

Sat May  7 11:28:41 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libexslt/libexslt.3: applied patch from Jonathan Wakely to fix
	  the namespace name for the EXSLT date and time functions in the man
	  page.

Wed Apr  6 23:58:12 CEST 2005 Igor Zlatkovic <igor@zlatkovic.com>

	* libexslt/exslt.c libexslt/libexslt.h: Windows build cleanups,
	  removed obsolete checks
	* libxslt/libxslt.h libxslt/win32config.h libxslt/xsltutils.h: 