@@ -1,3 +1,8 @@
+Sun Aug  7 16:04:47 CEST 2005 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/xsltutils.c: fixed a bug when size of xmlXPathContext
+	  changes, uses the libxml2 alloc and dealloc functions instead.
+
 Tue Jul 13 22:41:03 PDT 2005 William Brack <wbrack@mmm.com.hk>
 
 	* libxslt/transform.c: added check in xsltCopyText to assure
